fix(canvas): remove --wrapped style.

--- a/src/scss/pages/canvas/common/index.scss
+++ b/src/scss/pages/canvas/common/index.scss
@@ -26,17 +26,6 @@
         &.active {
             opacity: 1;
         }
-
-        @include mq('xxlarge') {
-            &--wrapped {
-                max-width: 1920px;
-                max-height: 769px;
-            }
-
-            &--border {
-                border: 1px $white solid;
-            }
-        }
     }
 
     &__controls {
